bugfix, new plots, report updates

--- a/CompSlab.tex
+++ b/CompSlab.tex
@@ -165,19 +165,20 @@ $$
    \end{array} } \right)
 \ee
 
-\be
+\be\label{eq:coschi}
 \cos\chi=\frac{\mu_1-\mu\xi}{\eta\sin\theta}
 \qquad
 \cos\chi_1=\frac{\mu-\mu_1\xi}{\eta_1\sin\theta}
 \ee
 
 \be
+\label{eq:sinchi}
 \sin\chi=\frac{\eta_1\sin\varphi}{\sin\theta}
 \qquad
 \sin\chi_1=-\frac{\eta\sin\varphi}{\sin\theta}
 \ee
 
-
+From \eqref{eq:coschi} and \eqref{eq:sinchi} we can get trigonometric functions for double $\chi$ angles
 \be
 \cos2\chi=2\frac{(\mu_1-\mu\xi)^2}{\eta^2(1-\xi^2)}-1
 \ee
